# alphapulse

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  seed_catalog.example.toml  settings.example.toml
docker/crawler/: Dockerfile
docs/: README.md  bilibili-crawl.md  web-ui.md
scripts/: sql_cli.py
src/alphapulse/: __main__.py
src/alphapulse/cli/: __init__.py  app.py  sql_shell.py
src/alphapulse/pipeline/: __init__.py  contracts.py
src/alphapulse/runtime/: __init__.py  config.py  logging.py  rqlite_state.py  rqlite_state_schema.sql  service.py  state.py  state_factory.py
src/alphapulse/seeds/: catalog.py  discovery.py  eastmoney.py
src/alphapulse/sources/: __init__.py  fetching.py
src/alphapulse/sources/bilibili/: __init__.py  adapter.py  api.py  ids.py  space_cli.py
src/alphapulse/sources/xueqiu/: __init__.py  adapter.py  parser.py  urls.py
src/alphapulse/storage/: __init__.py  base.py  clickhouse.py  factory.py  mongo.py  rqlite.py  rqlite_schema.sql  schema.sql
src/alphapulse/web/: __init__.py  app.py  models.py  queries.py
src/alphapulse/web/static/: app.js  index.html  (+1 more)
tests/fixtures/xueqiu/: comments.json  discovery.html  post.html
tests/integration/: test_clickhouse_storage.py  test_mongo_storage.py  test_rqlite_storage.py  test_service_pipeline.py
tests/unit/: test_bilibili_adapter.py  test_bilibili_api.py  test_bilibili_ids.py  test_config.py  test_fetching.py  test_models.py  test_seed_discovery.py  test_sql_shell.py  test_task_queue.py  test_web_app.py  test_web_config.py  test_web_queries.py  test_xueqiu_parser.py
