[project]
name = "alphapulse"
version = "0.1.0"
description = "Finance crawling pipeline built on Scrapling and ClickHouse."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "clickhouse-connect>=0.8.17",
  "fastapi>=0.115",
  "pydantic>=2.11.3",
  "scrapling[fetchers]>=0.2.99",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
alphapulse = "alphapulse.cli.app:main"

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphapulse"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
